:airplane Add shopping list

--- a/app/modules/sidebar/sidebar.component.html
+++ b/app/modules/sidebar/sidebar.component.html
@@ -2,4 +2,9 @@
     <li>
         <a ui-sref=".dashboard">Dashboard</a>
     </li>
+    <li>
+        <a ui-sref=".shopping">Shopping List</a>
+    </li>
 </ul>
+<a ui-sref=".shopping.list">app.shopping.list</a>
+<a ui-sref=".dashboard">Dashboard</a>
