:zap: Add product view

--- a/app/modules/sidebar/sidebar.component.html
+++ b/app/modules/sidebar/sidebar.component.html
@@ -3,8 +3,9 @@
         <a ui-sref=".dashboard">Dashboard</a>
     </li>
     <li>
-        <a ui-sref=".shopping">Shopping List</a>
+        <a ui-sref=".shopping.list">Shopping List</a>
+    </li>
+    <li>
+        <a ui-sref=".product">Product</a>
     </li>
 </ul>
-<a ui-sref=".shopping.list">app.shopping.list</a>
-<a ui-sref=".dashboard">Dashboard</a>
